# TaskF109

./: .gitignore  pyproject.toml
client/: Makefile  README.md  UDP_IMPLEMENTATION_SUMMARY.txt  basic_window.py  common.py  controller.py  device.py  enhanced_window.py  heartbeat_thread.py  log_config.py  main.py  protocol.py  requirement.txt  task.py  tcp_transport.py  timing.py  transport_strategy.py  udp_transport.py  worker.py
client/utils/: __init__.py  logger.py  styles.py
client/widgets/: __init__.py  button_panel.py  log_widget.py  section_widget.py
simu/: client.py  client_handler.py  config.py  main.py  protocol.py  server.py  test_udp.py  udp_server.py
simu/docs/plans/: 2026-02-28-udp-support-design.md  2026-02-28-udp-support-implementation.md
simu/utils/: logger.py  validator.py
