[project]
name = "taskf109"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru==0.7.3",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.18",
    "pyqt5-sip==12.18.0",
    "python-dateutil==2.9.0.post0",
    "setuptools==80.10.2",
    "six==1.17.0",
    "uv==0.10.10",
    "wheel==0.46.3",
]
